--- a/startPage.html
+++ b/startPage.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ouiz</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./img/nerd.png" alt="logo photo">
+            <h1>Nerd</h1>
+        </div>
+        <div class="container">
+            <div class="welcome-page">
+                <h1>Choose the language you want the quiz in? </h1>
+                <div class="category-container">
+
+                    <div class="select-category">
+                        <a href data-value="questions.json" class="category">HTML</a>
+                        <a href='#' data-value="javascriptQuestions.json" class="category">JAVASCRIPT</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <script src="app.js"></script>
+
 </body>
+
 </html>
