--- a/quizPage/index.html
+++ b/quizPage/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="img/nerd.png" type="icon">
+
 </head>
 <body>
     <div class="quiz-container">
